<resources>
    <string name="app_name">Licores</string>
    <string name="txt_username">Usuario</string>
    <string name="txt_password">Contraseña</string>
    <string name="btn_login">INGRESAR</string>
    <string name="txt_createHere">¿No tiene cuenta?, Crea una aqui.</string>
    <string name="account_email">Correo Electronico</string>
    <string name="account_name">Nombre</string>
    <string name="account_user">Usuario</string>
    <string name="account_password">Contraseña</string>
    <string name="btn_createaccount">CREAR CUENTA</string>
    <string name="tb_createAccount">Crear Cuenta</string>
    <string name="tb_container_search">Creditos</string>
    <string name="tb_container_home">Inicio</string>
    <string name="tb_container_Profile">Perfil</string>
    <string name="str_tab_exit">Salir</string>
    <string name="str_tab_search">Creditos</string>
    <string name="str_tab_profile">Perfil</string>
    <string name="str_tab_home">Inicio</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_container">ContainerActivity</string>
    <string name="name_profile">Nombre: </string>
    <string name="lastname_profile">Apellido: </string>
    <string name="email_profile">Correo Electronico: </string>
    <string name="address_profile">Direccion: </string>
    <string name="account_lastname">Apellido</string>
    <string name="account_address">Direccion</string>
    <string name="user_profile">Usuario: </string>
    <string name="title_name">NOMBRE</string>
    <string name="title_password">CONTRASEÑA</string>
    <string name="tb_listUser">Lista de Usuarios</string>
    <string name="title_activity_liqueur">liqueur</string>
    <string name="tb_createLiqueur">Crear Licor</string>
    <string name="str_menu_search">Buscar</string>
    <string name="action_search">Buscar</string>
    <string name="search">Buscar</string>
    <string name="create_liqueur">CREAR LICOR</string>
    <string name="create_liqueur_description">Descripcion</string>
    <string name="create_liqueur_price">Precio</string>
    <string name="create_liqueur_size">Tamaño</string>
    <string name="create_liqueur_name">Nombre</string>
    <string name="create_liqueur_type">Tipo</string>
    <string name="btn_create_account">CREAR USUARIO</string>
    <string name="btn_list_user">LISTAR USUARIO</string>
    <string name="cardview_type">Tipo:</string>
    <string name="cardview_name">Nombre:</string>
    <string name="cardview_size">Tamaño:</string>
    <string name="cardview_price">Precio:</string>
    <string name="cardview_description">Descripcion:</string>
    <string name="credits">CREDITOS</string>


    <!-- TODO: Remove or change this placeholder text -->
</resources>
