<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:carview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/id_picture_card"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    carview:cardCornerRadius="5dp"
    android:layout_margin="10dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cerveza"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:background="#53292929">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp">

                <TextView
                    android:id="@+id/txt_tittle_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardview_type"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/editTextColorWhite"/>
                <TextView
                    android:id="@+id/id_item_liqueur_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_toRightOf="@+id/txt_tittle_type"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/editTextColorWhite"/>
                <TextView
                    android:id="@+id/txt_tittle_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardview_name"
                    android:layout_below="@id/txt_tittle_type"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/editTextColorWhite"/>
                <TextView
                    android:id="@+id/id_item_liqueur_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_toRightOf="@+id/txt_tittle_name"
                    android:layout_below="@+id/id_item_liqueur_type"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/editTextColorWhite"/>
                <TextView
                    android:id="@+id/txt_tittle_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardview_size"
                    android:layout_below="@+id/txt_tittle_name"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/editTextColorWhite"/>
                <TextView
                    android:id="@+id/id_item_liqueur_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_toRightOf="@+id/txt_tittle_size"
                    android:layout_below="@+id/id_item_liqueur_name"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/editTextColorWhite"/>
                <TextView
                    android:id="@+id/txt_tittle_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardview_price"
                    android:layout_below="@+id/txt_tittle_size"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/editTextColorWhite"/>
                <TextView
                    android:id="@+id/id_item_liqueur_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_toRightOf="@+id/txt_tittle_price"
                    android:layout_below="@+id/id_item_liqueur_size"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/editTextColorWhite"/>
                <TextView
                    android:id="@+id/txt_tittle_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardview_description"
                    android:layout_below="@+id/txt_tittle_price"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/editTextColorWhite"/>
                <TextView
                    android:id="@+id/id_item_liqueur_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_toRightOf="@+id/txt_tittle_description"
                    android:layout_below="@+id/id_item_liqueur_price"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/editTextColorWhite"/>
                <CheckBox
                    android:id="@+id/chb_like_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    android:layout_below="@+id/id_item_liqueur_description"/>

            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>

</android.support.v7.widget.CardView>